--- a/styles.scss
+++ b/styles.scss
@@ -83,6 +83,7 @@ body{
         padding: 20px;
         background-color: $light-blue;
         margin-top: 20px;
+        border-radius: 10px;
 
         .handle{
             color:$button-blue !important;
@@ -96,6 +97,7 @@ body{
             display: block;
             margin-left: auto;
             margin-right: auto;
+            border-radius: 50%;
         }
 
         .joined-date{
@@ -126,6 +128,7 @@ body{
 
         .user-location,.user-blog, .user-twitter, .user-github{
             color:$gray;
+            padding-left: 10px;
         }
 
         .github-information{
